re-added html wrapping

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,6 +16,7 @@ jobs:
 
       - run: pip install pyxel
       - run: pyxel package . dragons_tail.py
+      - run: pyxel app2html Dragon-Pyxel-Tail.pyxapp
       - run: git config --global user.name "Nephilus-notes"
       - run: git config --global user.email "cmhmcc@gmail.com"
       
