--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -6,7 +6,7 @@ on:
     - prod
     
 jobs: 
-  build-pyxapp:
+  build-html-and-push-to-bare-bones-branch:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,8 @@ jobs:
       - run: git config --global user.name "Nephilus-notes"
       - run: git config --global user.email "cmhmcc@gmail.com"
       
-      - run: git add .
-      - run: git commit -m "adding pyxapp"
-      - run: git push -u origin prod
+      - run: git mv options Dragon-Pyxel-Tail.html index.html
+      - run: git add index.html 
+      - run: git commit -m "updating html"
+      - run: git push -u origin bare-bones
     
